--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,11 @@ html,
 body {
   padding: 0;
   margin: 0;
+  font-family: 'Reddit Mono', monospace;
 }
+
+.main-content {
+  max-width: 840px;
+  margin: 0 auto;
+}
+
