--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,32 @@ body {
   margin: 0 auto;
 }
 
+.pe-table {
+  border-collapse: collapse;
+}
+
+.pe-table td, .pe-table th {
+  border: 1px solid #ddd;
+  text-align: left;
+  padding: 8px;
+}
+
+.pe-table td {
+  font-size: 12px;
+}
+
+.pe-table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+/*tr:hover {
+  background-color: #ddd;
+}*/
+
+pre.inline-code {
+  display: inline;
+}
+
+pre.inline-code code.hljs {
+  display: inline;
+}
