--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,24 @@ body {
   font-family: 'Reddit Mono', monospace;
 }
 
-.main-content {
+.main-content,
+.main-nav {
   max-width: 840px;
   margin: 0 auto;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+
+.main-nav ul {
+  display: flex;
+  align-items: center;
+  padding: 1rem 0;
+}
+
+.main-nav ul li {
+  list-style: none;
+  margin-right: 2rem;
 }
 
 div.table-wrapper {
